# kiwipiepy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  evaluate.py  kiwipiepy.sln  kiwipiepy.vcxproj  kiwipiepy.vcxproj.filters  requirements.txt  setup.py  test.py
.github/workflows/: deploy.yml  deploy_test.yml  generate_documentation.yml  numpy_version.py  pull_request_test.yml
benchmark/disambiguate/: README.md  disambiguate.py  results.md
benchmark/disambiguate/testset/: distant.txt  irregular_verbs.txt  nouns.txt  verb_vs_adj.txt
benchmark/join/: evaluate_join.py
benchmark/oov/: handle_oov.py
benchmark/oov/testset/: ne_1.txt  ne_2.txt  ne_4.txt
benchmark/sentence_split/: README.md  bareun_ref.py  koalanlp_ref.py  kss_ref.py  sentence_split.py
benchmark/sentence_split/testset/: blogs.txt  etn.txt  nested.txt  sample.txt  tweets.txt
benchmark/space/: README.md  make_space_errors.py  space.py
benchmark/space/testset/: written.txt
benchmark/tokenize/: README.md  tokenize.py
document/: document_header.html
html/kiwipiepy/: index.html
kiwipiepy/: __init__.py  __main__.py  _c_api.py  _c_api.pyi  _wrap.py  const.py  default_typo_transformer.py  documentation.md  documentation.rst  knlm.py  sj.morph  sw_tokenizer.py  sw_trainer.py  template.py  transformers_addon.py  utils.py
kiwipiepy/corpus/: stopwords.txt  synonyms.txt
model/: MANIFEST.in  setup.py
model/kiwipiepy_model/: __init__.py  _version.py
src/: KiwiPy.cpp  PyDoc.h  PyUtils.h
src/core/: Kiwi.cpp  Kiwi.h
test/: test_kiwipiepy.py  test_nogil_safety.py  test_transformers_addon.py
test/sample_tokenizer/: tokenizer.json  tokenizer_config.json
test/test_corpus/: constitution.txt
test_corpus/: custom_stopwords.txt
